# go-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: AssetMan.hpp  Game.hpp  GameApp.h  MainBoard.hpp  MainMenu.hpp  ModeSelection.hpp  PauseState.hpp  Settings.hpp  State.hpp  StateManager.hpp  board.h  game.h  group.h  nonclass.h
source/: main.cpp
src/: AssetMan.cpp  GameApp.cpp  MainBoard.cpp  MainMenu.cpp  ModeSelection.cpp  PauseState.cpp  Settings.cpp  StateManager.cpp  board.cpp  game.cpp  group.cpp  main.cpp
